# AutoTrader-AgentEdge

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE_STATUS.md  CACHE_MIGRATION.md  CHANGELOG_weekend_fix.md  CLAUDE.md  CLI_INTEGRATION_SUMMARY.txt  CLI_TESTING_RESULTS.md  CODE_REVIEW.md  EXPANDED_DATA_COLLECTION_PROMPT.md  IMPLEMENTATION_NOTES.md  KNOWN_ISSUES.md  NOTICE  QUICK_REF_CARD.txt  README.md  RECENT_ACTIVITY_SUMMARY.md  RESTRUCTURE_PLAN.md  STREAM_STATUS_SNAPSHOT.txt  SUMMARY.md  TESTING_REPORT.md  TEST_RESULTS.md  TODO.md  TRADING_SYSTEMS_SUMMARY.md  WORK_ASSIGNMENTS.md  backtest_mas.py  main.py  pyproject.toml  quant_direct.py  requirements-dev.txt  requirements.txt  requirements_frozen.txt  sector_detection_test.py  sentiment_agent_cli.py  sentiment_agent_simple.py  sentiment_cli.py  sentiment_direct.py  setup.cfg  tech_direct.py  (+2 more)
.github/workflows/: README.md  auto-fix-on-push.yml  check-commit-signatures.yml  lint.yml  main.yml
architecture_decisions/: 001-code-organization.md  002-yaml-prompt-management.md
config/: agent_prompts.yaml  config.yaml
config_defaults/: README.md  accounts_config.py  agent_prompts.yaml  cli_help.yaml  cli_messages.py  cli_messages.yaml  config.example.yaml  example_secrets.json  faq.yaml  help_commands.yaml  market_hours.yaml  message_loader.py  paths_config.yaml  portfolio_config.yaml  scanner_config.yaml  scheduler_cli_messages.yaml  scheduler_config.json  scheduler_config.yaml  trading_config.json  trading_config.py  trading_config.yaml  trading_modes.yaml  trading_tips.yaml  voters_config.yaml
config_defaults/voter_profiles/: weekly_kama.yaml
config_defaults/watchlists/: balanced.yaml  momentum.yaml  wheel_strategy.yaml
docs/: CLI_INTEGRATION_STATUS.md  CURRENT_ARCHITECTURE.md  IMPORTANT_SYSTEM_CONTEXT.md  README.md  README_SENTIMENT_AGENT.md  README_STRUCTURE.md  alpaca_market_data_integration.md  alpaca_order_management.md  caching_architecture.md  indicator_library.md  issue_relationship_map.md  macd_histogram_update_summary.md  multi_stock_scanner.md  news_limitations.md  position_management_enhancements.md  project-history.md  project_rebuild_summary.md  project_structure.md  research_papers.md  sentiment_agent.md  sentiment_agent_future_work.md  sentiment_agent_refactoring.md  status_summary_sentiment_tech_agents.md  terminology.md  testing_framework.md  trade_history_database.md  trading_system_architecture.md  web_scraping_corporate_actions.md
docs/01_overview/: 01_system_overview.md  02_phases_of_operation.md  03_system_context.md
docs/02_architecture/: 01_core_architecture.md  02_agent_ensemble.md  03_voting_system.md  04_cache_system.md  05_integration_apis.md  06_llm_routing.md  07_scheduler_service.md  08_llm_routing_architecture.md  09_trade_history_database.md  trade_history_database.md
docs/03_reference/: 01_validation_results.md  02_terminology.md  03_commands.md  04_troubleshooting.md  05_known_issues.md  06_naming_conventions.md  06_news_limitations.md  08_api_data_sources.md
docs/04_development/: 01_codebase_structure.md  02_project_status.md  03_cli_trade_assistant.md  04_cache_developer_guide.md  05_automation_setup.md  06_code_quality.md  07_backtesting_framework.md  08_refactor_impact_assessment.md  09_core_features_gameplan.md  13_llm_consolidation_analysis.md  14_llm_consolidation_analysis.md  19_partial_exit_strategies.md  CLI_INTEGRATION_STATUS.md  CONFIG_SCHEMA_REVIEW.md  GTT_IMPLEMENTATION.md  PROFILE_PRESET_ARCHITECTURE.md  README.md  cache_developer_guide.md  config_migration_notes.md  gex_quick_reference.md  gex_voter_integration_guide.md
docs/05_decisions/: 01_code_organization.md  02_error_handling_logging.md  03_api_caching_patterns.md  04_agent_singleton_patterns.md  README.md
docs/06_features/: 01_position_alerts_system.md  04_unified_features_testing.md  08_timeframe_specification.md
docs/07_testing/: README.md
docs/08_research/: 01_broker_api_comparison_2025.md  README.md
docs/09_future/: README.md  (+2 more)
examples/: basic_voting_demo.py  run_trading_pipeline.py  scheduled_pipeline_runner.py
reports/: .gitignore  README.md  README_STRUCTURE.md  README_TESTING_APPROACH.md  TEMPLATE.md  V0-V4_Framework_Results.md  V0_2024_Full_Year_Analysis.md  V0_AAPL_Q1_2024_Analysis.md  V0_V3_ENHANCED_METRICS_SUMMARY.md  advisor_findings_summary.md  advisor_presentation_ai_showcase.md  advisor_presentation_technical_appendix.md  news_cache_summary.json
scripts/: README.md  README_BACKTESTING.md  README_IMPORTS.md  _template_script.py  aggregate_results.py  analyze_existing_backtests.py  analyze_results.py  backtest.py  backtest_configs.yaml  backtest_mas.py  backtest_service.py  batch_compare_strategies.py  cache_manager.py  cleanup_legacy_cache.py  compare_strategies.py  demo_enhanced_reporting.py  demo_output_organization.py  demo_parallel_strategies.py  demo_three_way_comparison.py  diagnose_macd_periods.py  filter_cache_by_url_sources.py  find_macd_recovery_periods.py  generate_consolidated_report.py  generate_market_conditions_report.py  generate_report_from_existing.py  generate_results_summary.py  lint_check.py  migrate_cache_to_sqlite.py  populate_historical_cache.py  remove_commit_signatures.py  reorganize_docs.py  run_backtest_suite.py  run_daily_scan.py  run_mas.py  run_multi_timeframe_scan.py  sentiment_cli.py  sentiment_direct.py  setup.py  tech_direct.py  verify_free_data_access.py  (+1 more)
setup/: claude_code_setup.md
src/: MIGRATION_GUIDE.md  __init__.py  config_loader.py  main.py  test_sentiment.py
state/: README.md
tests/: conftest.py  test_a_stream_smoke.py  test_alpaca_basic.py  test_architecture_foundation.py  test_basic.py  test_cli_tools_new.py  test_comparison_minimal.py  test_date_utils.py  test_end_to_end.py  test_hardcoded_strategy.py  test_indicator_library.py  test_market_data_sources.py  test_market_data_tool.py  test_mas_flow.py  test_nasdaq_data_link.py  test_news_sources.py  test_quant_agent.py  test_query_parser.py  test_sentiment_tool_call.py  test_strategy_v2.py  test_tech_agent.py  test_yaml_prompts.py
(+1075 files in other folders)
