[project]
name = "AutoTrader-AgentEdge"
version = "1.0.0"
description = "Multi-agent AI trading platform powered by AgentEdge architecture"
authors = [{name = "iAmGiG"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "yfinance>=0.2.50",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "autogen-agentchat>=0.7.0",
    "autogen-core>=0.7.0",
    "autogen-ext>=0.7.0",
    "openai>=1.90.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "polygon-api-client>=1.15.0",
]

[tool.autopep8]
# Main autopep8 configuration
ignore = ["E402"]  # module level import not at top of file
max_line_length = 100

[tool.isort]
# Skip scripts directory to preserve sys.path setup
skip_glob = ["scripts/*.py"]
known_local_folder = ["src", "config"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
# Black configuration
line-length = 100
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.venv
  | \.cache
  | __pycache__
  | reports
)/
'''

[tool.ruff]
# Ruff configuration
line-length = 100
target-version = "py310"
exclude = [".git", "__pycache__", ".venv", ".cache", "reports"]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long (handled by formatters, GitHub linter will catch in CI)
ignore = ["E402", "E501"]
select = ["E", "F", "I", "W", "C", "N"]

[tool.ruff.lint.isort]
known-local-folder = ["src", "config"]

[tool.ruff.lint.per-file-ignores]
# Utilities that need sys.path manipulation before imports
"scripts/utilities/cache_manager.py" = ["E402"]
# Deprecated research scripts (v0-v4 analysis, old config demos)
"scripts/research/**/*.py" = ["I001", "E402", "E501"]
# Line length handled by formatters and GitHub CI
"*" = ["E501"]
# Issue #414: TrailingStopManager has justified complexity for profit zone logic
"src/trading/trailing_stop_manager.py" = ["C901"]

[tool.pycodestyle]
# For tools that read from pyproject.toml
ignore = ["E402"]
max-line-length = 100

[tool.flake8]
# Note: flake8 doesn't support pyproject.toml natively, this is for reference
# Real config stays in .flake8 file
ignore = ["E402"]
max-line-length = 100

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
# MyPy static type checking
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "deprecated/",
    "tests/",
    "scripts/",
]

[tool.bandit]
# Bandit security scanning
exclude_dirs = [
    "/tests/",
    "/deprecated/",
    "/.venv/",
]
skips = [
    "B101",  # assert_used - we use assert in tests
    "B601",  # paramiko_calls - not applicable
]

[tool.coverage.run]
# Coverage settings
source = ["src"]
omit = [
    "*/tests/*",
    "*/deprecated/*",
    "*/__init__.py",
]

[tool.coverage.report]
# Coverage report settings
precision = 2
show_missing = true
skip_covered = false
