[project]
name = "AutoTrader-AgentEdge"
version = "1.0.0"
description = "Multi-agent AI trading platform powered by AgentEdge architecture"
authors = [{name = "iAmGiG"}]
requires-python = ">=3.10"
dependencies = [
    # Core AutoGen 0.7.x framework
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
    # Trading APIs
    "alpaca-py>=0.43.2",
    # Market data sources
    "polygon-api-client>=1.16.3",
    # LLM and AI
    "openai>=2.7.0",
    "tiktoken>=0.12.0",
    # Data processing
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    # HTTP clients
    "requests>=2.32.0",
    "httpx>=0.28.1",
    # Sentiment analysis (for research/deprecated V0-V4 agents)
    "nltk>=3.9.0",
    "scikit-learn>=1.7.0",
    # Utility
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "ruff>=0.1.15",
    "black>=24.1.1",
    "isort>=5.13.2",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "docformatter>=1.7.5",
    # Markdown
    "markdownlint-cli2>=0.12.1",
    # Security
    "bandit[toml]>=1.7.6",
    # Code quality metrics
    "radon>=6.0.1",
    "vulture>=2.10",
    # Pre-commit hooks
    "pre-commit>=3.6.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    # Documentation
    "interrogate>=1.5.0",
    # Utilities
    "ipython>=8.12.0",
]

[tool.autopep8]
# Main autopep8 configuration
ignore = ["E402"]  # module level import not at top of file
max_line_length = 100

[tool.isort]
# Skip scripts directory to preserve sys.path setup
skip_glob = ["scripts/*.py"]
known_local_folder = ["src", "config"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
# Black configuration
line-length = 100
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.venv
  | \.cache
  | __pycache__
  | reports
)/
'''

[tool.ruff]
# Ruff configuration
line-length = 100
target-version = "py310"
exclude = [".git", "__pycache__", ".venv", ".cache", "reports"]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long (handled by formatters, GitHub linter will catch in CI)
ignore = ["E402", "E501"]
select = ["E", "F", "I", "W", "C", "N"]

[tool.ruff.lint.isort]
known-local-folder = ["src", "config"]

[tool.ruff.lint.per-file-ignores]
# Utilities that need sys.path manipulation before imports
"scripts/utilities/cache_manager.py" = ["E402"]
# Deprecated research scripts (v0-v4 analysis, old config demos)
"scripts/research/**/*.py" = ["I001", "E402", "E501"]
# Line length handled by formatters and GitHub CI
"*" = ["E501"]
# Issue #414: TrailingStopManager has justified complexity for profit zone logic
"src/trading/trailing_stop_manager.py" = ["C901"]

[tool.pycodestyle]
# For tools that read from pyproject.toml
ignore = ["E402"]
max-line-length = 100

[tool.flake8]
# Note: flake8 doesn't support pyproject.toml natively, this is for reference
# Real config stays in .flake8 file
ignore = ["E402"]
max-line-length = 100

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
# MyPy static type checking
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "deprecated/",
    "tests/",
    "scripts/",
]

[tool.bandit]
# Bandit security scanning
exclude_dirs = [
    "/tests/",
    "/deprecated/",
    "/.venv/",
]
skips = [
    "B101",  # assert_used - we use assert in tests
    "B601",  # paramiko_calls - not applicable
]

[tool.coverage.run]
# Coverage settings
source = ["src"]
omit = [
    "*/tests/*",
    "*/deprecated/*",
    "*/__init__.py",
]

[tool.coverage.report]
# Coverage report settings
precision = 2
show_missing = true
skip_covered = false
